--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "crypto-js": "^3.1.9-1",
     "egg": "^2.2.1",
     "egg-scripts": "^2.5.0",
-    "sha1": "^1.1.1"
+    "express": "^4.16.4",
+    "sha1": "^1.1.1",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
