feature: fix access token api

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "egg": "^2.2.1",
     "egg-scripts": "^2.5.0",
     "express": "^4.16.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "sha1": "^1.1.1",
     "socket.io": "^2.1.1"
   },
